updated text label orientation

--- a/barchart/index.html
+++ b/barchart/index.html
@@ -128,6 +128,7 @@ d3.csv("data.csv", type, function(error, data) {
   svg.append("g")
       .attr("class", "x axis")
       .attr("transform", "translate(0," + height + ")")
+      .attr("transform", "rotate(-90)")
       .call(xAxis);
 
   svg.append("g")
