--- a/barchart/index.html
+++ b/barchart/index.html
@@ -100,14 +100,13 @@ var xAxis = d3.svg.axis()
 
 var yAxis = d3.svg.axis()
     .scale(y)
-    .orient("left")
-    .tickFormat(formatPercent);
+    .orient("left");
 
 var tip = d3.tip()
   .attr('class', 'd3-tip')
   .offset([-10, 0])
   .html(function(d) {
-    return "<strong>Frequency:</strong> <span style='color:red'>" + d.frequency + "</span>";
+    return "<strong>count:</strong> <span style='color:red'>" + d.count + "</span>";
   })
 
 var svg = d3.select("#canvas").append("svg")
@@ -122,8 +121,8 @@ var svg = d3.select("#canvas").append("svg")
 svg.call(tip);
 
 d3.csv("data.csv", type, function(error, data) {
-  x.domain(data.map(function(d) { return d.letter; }));
-  y.domain([0, d3.max(data, function(d) { return d.frequency; })]);
+  x.domain(data.map(function(d) { return d.state; }));
+  y.domain([0, d3.max(data, function(d) { return d.count; })]);
 
   svg.append("g")
       .attr("class", "x axis")
@@ -132,7 +131,7 @@ d3.csv("data.csv", type, function(error, data) {
         .selectAll("text")  
         .style("text-anchor", "end")
      	.attr("dx", "-.8em")
-     	.attr("dy", ".15em")
+     	.attr("dy", "-.15em")
      	.attr("transform", "rotate(-90)")
 
   svg.append("g")
@@ -143,23 +142,23 @@ d3.csv("data.csv", type, function(error, data) {
       .attr("y", 6)
       .attr("dy", ".71em")
       .style("text-anchor", "end")
-      .text("Frequency");
+      .text("count");
 
   svg.selectAll(".bar")
       .data(data)
     .enter().append("rect")
       .attr("class", "bar")
-      .attr("x", function(d) { return x(d.letter); })
+      .attr("x", function(d) { return x(d.state); })
       .attr("width", x.rangeBand())
-      .attr("y", function(d) { return y(d.frequency); })
-      .attr("height", function(d) { return height - y(d.frequency); })
+      .attr("y", function(d) { return y(d.count); })
+      .attr("height", function(d) { return height - y(d.count); })
       .on('mouseover', tip.show)
       .on('mouseout', tip.hide)
 
 });
 
 function type(d) {
-  d.frequency = +d.frequency;
+  d.count = +d.count;
   return d;
 }
 
