--- a/barchart/index.html
+++ b/barchart/index.html
@@ -82,7 +82,7 @@
 <script src="../d3-tip/index.js"></script>
 <script>
 
-var margin = {top: 40, right: 20, bottom: 50, left: 40},
+var margin = {top: 40, right: 20, bottom: 50, left: 60},
     width = 960 - margin.left - margin.right,
     height = 500 - margin.top - margin.bottom;
 
@@ -140,7 +140,7 @@ d3.csv("data.csv", type, function(error, data) {
     .append("text")
       .attr("transform", "rotate(-90)")
       .attr("y", 6)
-      .attr("dy", ".71em")
+      .attr("dy", "-3em")
       .style("text-anchor", "end")
       .text("count");
 
