--- a/barchart/index.html
+++ b/barchart/index.html
@@ -160,9 +160,7 @@ d3.csv("data.csv", type, function(error, data) {
       .attr("y", function(d) { return y(d.count); })
       .attr("height", function(d) { return height - y(d.count); })
       .on('mouseover', tip.show)
-      .on('mouseout', tip.hide)
-
-
+      .on('mouseout', tip.hide);
 
 
 
@@ -197,8 +195,8 @@ d3.select("input").on("change", change);
       .selectAll("g")
         .delay(delay);
   }
+  });
   
-});  
   
 
 
