--- a/barchart/index.html
+++ b/barchart/index.html
@@ -98,7 +98,9 @@ var y = d3.scale.linear()
 
 var xAxis = d3.svg.axis()
     .scale(x)
-    .orient("bottom");
+    .orient("bottom")
+    .tickSize(0)
+    .tickPadding(5);
 
 var yAxis = d3.svg.axis()
     .scale(y)
