--- a/barchart/index.html
+++ b/barchart/index.html
@@ -88,8 +88,6 @@ var margin = {top: 40, right: 20, bottom: 50, left: 65},
     width = 960 - margin.left - margin.right,
     height = 500 - margin.top - margin.bottom;
 
-var formatPercent = d3.format(".0%");
-
 var x = d3.scale.ordinal()
     .rangeRoundBands([0, width], .1);
 
@@ -98,9 +96,9 @@ var y = d3.scale.linear()
 
 var xAxis = d3.svg.axis()
     .scale(x)
-    .orient("bottom")
     .tickSize(0)
-    .tickPadding(5);
+    .tickPadding(5)
+    .orient("bottom");
 
 var yAxis = d3.svg.axis()
     .scale(y)
