--- a/barchart/index.html
+++ b/barchart/index.html
@@ -138,7 +138,7 @@ d3.csv("data.csv", function(error, data) {
         .selectAll("text")  
         .style("text-anchor", "end")
      	.attr("dx", "-.8em")
-     	.attr("dy", "-.15em")
+     	.attr("dy", ".3em")
      	.attr("transform", "rotate(-90)")
 
   svg.append("g")
@@ -195,7 +195,7 @@ d3.select("input").on("change", change);
             .selectAll("text")  
         	.style("text-anchor", "end")
      		.attr("dx", "-.8em")
-     		.attr("dy", "-.15em")
+     		.attr("dy", ".3em")
      		.attr("transform", "rotate(-90)")
       .selectAll("g")
         .delay(delay);
