--- a/barchart/index.html
+++ b/barchart/index.html
@@ -105,7 +105,8 @@ var xAxis = d3.svg.axis()
 
 var yAxis = d3.svg.axis()
     .scale(y)
-    .orient("left");
+    .orient("left")
+    .tickSize(1);
 
 var tip = d3.tip()
   .attr('class', 'd3-tip')
@@ -132,7 +133,7 @@ d3.csv("data.csv", function(error, data) {
   });
 
   x.domain(data.map(function(d) { return d.state; }));
-  y.domain([0, d3.max(data, function(d) { return d.count; })]);
+  y.domain([0, 800]);
 
   svg.append("g")
       .attr("class", "x axis")
