--- a/barchart/index.html
+++ b/barchart/index.html
@@ -89,7 +89,7 @@
 
 var margin = {top: 40, right: 20, bottom: 50, left: 65},
     width = 960 - margin.left - margin.right,
-    height = 400 - margin.top - margin.bottom;
+    height = 450 - margin.top - margin.bottom;
 
 var x = d3.scale.ordinal()
     .rangeRoundBands([0, width], .1);
@@ -106,7 +106,8 @@ var xAxis = d3.svg.axis()
 var yAxis = d3.svg.axis()
     .scale(y)
     .orient("left")
-    .tickSize(1);
+    .tickSize(2)
+    .ticks(4);
 
 var tip = d3.tip()
   .attr('class', 'd3-tip')
@@ -119,7 +120,7 @@ var svg = d3.select("#canvas").append("svg")
 	.attr("id", "chart")
     .attr("width", width + margin.left + margin.right)
     .attr("height", height + margin.top + margin.bottom)
-    .attr("viewBox", "0 0 960 400")
+    .attr("viewBox", "0 0 960 450")
     .attr("preserveAspectRatio", "xMidYMid")
   .append("g")
     .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
@@ -151,7 +152,7 @@ d3.csv("data.csv", function(error, data) {
     .append("text")
       .attr("transform", "rotate(-90)")
       .attr("y", 6)
-      .attr("dy", "-3.5em")
+      .attr("dy", "-3em")
       .style("text-anchor", "end")
       .text("Number of Universities");
 
