--- a/barchart/index.html
+++ b/barchart/index.html
@@ -106,7 +106,7 @@ var xAxis = d3.svg.axis()
 var yAxis = d3.svg.axis()
     .scale(y)
     .orient("left")
-    .tickSize(2)
+    .tickSize(4)
     .ticks(4);
 
 var tip = d3.tip()
@@ -154,6 +154,7 @@ d3.csv("data.csv", function(error, data) {
       .attr("y", 6)
       .attr("dy", "-3em")
       .style("text-anchor", "end")
+      .style("font-size", "11px")
       .text("Number of Universities");
 
   svg.selectAll(".bar")
