--- a/barchart/index.html
+++ b/barchart/index.html
@@ -151,7 +151,8 @@ d3.csv("data.csv", function(error, data) {
       .call(yAxis)
       	.selectAll("text")  
         .style("font-size", "11px")
-    .append("text")
+	svg.select(".y axis")
+	.append("text")
       .attr("transform", "rotate(-90)")
       .attr("y", 6)
       .attr("dy", "-3em")
