--- a/barchart/index.html
+++ b/barchart/index.html
@@ -152,6 +152,7 @@ d3.csv("data.csv", function(error, data) {
       	.selectAll("text")  
         .style("font-size", "11px")
 	svg.select(".y axis")
+	console.log("success")
 	.append("text")
       .attr("transform", "rotate(-90)")
       .attr("y", 6)
