--- a/barchart/index.html
+++ b/barchart/index.html
@@ -166,6 +166,7 @@ d3.csv("data.csv", function(error, data) {
       .attr("y", 6)
       .attr("dy", "-3.5em")
       .style("text-anchor", "end")
+      .style("font-size", "14px")
       .text("Number of Universities");
 
   svg.selectAll(".bar")
