--- a/barchart/index.html
+++ b/barchart/index.html
@@ -30,16 +30,14 @@
   display: none;
 }
 
-  
-.ytitle {
-  font-size:14px;
-  }
-
 
 .y.axis text {
   font-size:11px;
   }
 
+.x.axis text {
+  font-size:12px;
+  }
 
 .d3-tip {
   line-height: 1;
