--- a/barchart/vert.html
+++ b/barchart/vert.html
@@ -168,7 +168,7 @@ d3.csv("data.csv", function(error, data) {
   svg.selectAll(".bar")
       .data(data)
     .enter().append("rect")
-      .attr('transform', function(d, i) { return 'translate(0,'  + y(i) + ')'; });
+      .attr('transform', function(d, i) { return 'translate(0,'  + y(i) + ')'; })
       .attr("class", "bar")
       
       .attr("width", function(d) { return x(d.count); })
