--- a/barchart/vert.html
+++ b/barchart/vert.html
@@ -98,7 +98,8 @@
 
 var margin = {top: 40, right: 20, bottom: 50, left: 65},
     width = 450 - margin.left - margin.right,
-    height = 960 - margin.top - margin.bottom;
+    height = 960 - margin.top - margin.bottom,
+    barHeight = 20;
 
 var x = d3.scale.linear()
     .range([0, width]);
@@ -142,8 +143,8 @@ d3.csv("data.csv", function(error, data) {
     d.count = +d.count;
   });
 
-  x.domain(data.map(function(d) { return d.state; }));
-  y.domain([0, 800]);
+  x.domain([0, 800]);
+  y.domain(data.map(function(d) { return d.state; }));
 
   svg.append("g")
       .attr("class", "x axis")
