--- a/barchart/vert.html
+++ b/barchart/vert.html
@@ -111,11 +111,11 @@ var xAxis = d3.svg.axis()
     .scale(x)
     .tickSize(0)
     .tickPadding(0)
-    .orient("left");
+    .orient("top");
 
 var yAxis = d3.svg.axis()
     .scale(y)
-    .orient("top")
+    .orient("left")
     .tickSize(4)
     .ticks(4);
 
