--- a/barchart/vert.html
+++ b/barchart/vert.html
@@ -26,17 +26,17 @@
   fill: orangered ;
 }
 
-.x.axis path {
+.y.axis path {
   display: none;
 }
 
 
 .y.axis text {
-  font-size:11px;
+  font-size:13px;
   }
 
 .x.axis text {
-  font-size:13px;
+  font-size:11px;
   }
 
 .d3-tip {
@@ -109,15 +109,13 @@ var y = d3.scale.ordinal()
 
 var xAxis = d3.svg.axis()
     .scale(x)
-    .tickSize(0)
-    .tickPadding(0)
+    .tickSize(4)
+    .ticks(4)
     .orient("top");
 
 var yAxis = d3.svg.axis()
     .scale(y)
-    .orient("left")
-    .tickSize(4)
-    .ticks(4);
+    .orient("left");
 
 var tip = d3.tip()
   .attr('class', 'd3-tip')
