--- a/barchart/vert.html
+++ b/barchart/vert.html
@@ -115,6 +115,8 @@ var xAxis = d3.svg.axis()
 
 var yAxis = d3.svg.axis()
     .scale(y)
+    .tickSize(0)
+    .tickPadding(0)
     .orient("left");
 
 var tip = d3.tip()
