--- a/barchart/vert.html
+++ b/barchart/vert.html
@@ -164,10 +164,45 @@ d3.csv("data.csv", function(error, data) {
 
   bar.append("rect")
       .attr("width", function(d) { return x(d.count); })
+      .attr("y", function(d) { return y(d.state); })
       .attr("height", y.rangeBand())
       .on('mouseover', tip.show)
       .on('mouseout', tip.hide);
 
+
+
+d3.select("input").on("change", change);
+
+  var sortTimeout = setTimeout(function() {
+    d3.select("input").property("checked", true).each(change);
+  }, 2000);
+
+  function change() {
+    clearTimeout(sortTimeout);
+
+    // Copy-on-write since tweens are evaluated after a delay.
+    var y0 = y.domain(data.sort(this.checked
+        ? function(a, b) { return b.count - a.count; }
+        : function(a, b) { return d3.ascending(a.state, b.state); })
+        .map(function(d) { return d.state; }))
+        .copy();
+
+    svg.selectAll(".bar")
+        .sort(function(a, b) { return y0(a.state) - y0(b.state); });
+
+    var transition = svg.transition().duration(750),
+        delay = function(d, i) { return i * 50; };
+
+    transition.selectAll(".bar")
+        .delay(delay)
+        .attr("y", function(d) { return y0(d.state); });
+
+    transition.select(".y.axis")
+        .call(yAxis)
+
+      .selectAll("g")
+        .delay(delay);
+  }
 
 
   });
