--- a/barchart/vert.html
+++ b/barchart/vert.html
@@ -186,13 +186,13 @@ d3.select("input").on("change", change);
         .map(function(d) { return d.state; }))
         .copy();
 
-    svg.selectAll(".bar")
+    svg.selectAll("g.bar")
         .sort(function(a, b) { return y0(a.state) - y0(b.state); });
 
     var transition = svg.transition().duration(750),
         delay = function(d, i) { return i * 50; };
 
-    transition.selectAll(".bar")
+    transition.selectAll("g.bar")
         .delay(delay)
         .attr("y", function(d) { return y0(d.state); });
 
