--- a/barchart/vert.html
+++ b/barchart/vert.html
@@ -214,7 +214,7 @@ function resize() {
 
     // resize the chart
     x.range([0, width]);
-    d3.select(chart.node().parentNode)
+    d3.select("svg")
         .style('height', (y.rangeExtent()[1] + margin.top + margin.bottom) + 'px')
         .style('width', (width + margin.left + margin.right) + 'px');
 
