--- a/barchart/vert.html
+++ b/barchart/vert.html
@@ -219,11 +219,8 @@ function resize() {
     svg.selectAll('rect')
         .attr('width', function(d) { return x(d.count); });
 
-
-
     // update axes
-      svg.select("x axis").call(xAxis);
-      svg.select("y axis").call(yAxis);
+      svg.select("x axis").call(xAxis.orient('bottom'));
 
 	}
 
