--- a/barchart/vert.html
+++ b/barchart/vert.html
@@ -98,8 +98,7 @@
 
 var margin = {top: 40, right: 20, bottom: 50, left: 65},
     width = 960 - margin.left - margin.right,
-    height = 960 - margin.top - margin.bottom,
-    barHeight = 20;
+    height = 1160 - margin.top - margin.bottom;
 
 var x = d3.scale.linear()
     .range([0, width])
