--- a/barchart/vert.html
+++ b/barchart/vert.html
@@ -123,9 +123,9 @@ var tip = d3.tip()
   .attr('class', 'd3-tip')
   .offset([-10, 0])
   .html(function(d) {
-    return "<strong>" + d.state + ":</strong> <span style='color:red'> has " + d.count + " universities.</span>"
-    + "It ranks <strong>#" + d.per_capita_rank + " in terms of universities on a per capita basis, having "
-    + "one university for every " + d.per_capita + " thousand residents.";
+    return "<strong>" + d.state + "</strong> has <span style='color:red'>" + d.count + " universities.</span><br>"
+    + "It ranks <strong><span style='color:red'>#" + d.per_capita_rank + " </span></strong>in terms of universities on a per capita basis, <br>"
+    + " having one university for every " + d.per_capita + " thousand residents.";
   })
 
 var svg = d3.select("#canvas").append("svg")
