--- a/barchart/vert.html
+++ b/barchart/vert.html
@@ -182,7 +182,8 @@ function resize() {
     x.range([0, width]);
     d3.select("svg")
         .style('height', (y.rangeExtent()[1] + margin.top + margin.bottom) + 'px')
-        .style('width', (width + margin.left + margin.right) + 'px');
+        .style('width', (width + margin.left + margin.right) + 'px')
+        .style('padding-left', '45px');
 
     svg.selectAll('rect')
         .attr('width', function(d) { return x(d.count); });
