--- a/barchart/vert.html
+++ b/barchart/vert.html
@@ -41,7 +41,6 @@
 
 .d3-tip {
   line-height: 1;
-  font-weight: bold;
   font-size: 12px;
   padding: 12px;
   background: rgba(0, 0, 0, 0.8);
@@ -132,6 +131,7 @@ var svg = d3.select("#canvas").append("svg")
 	.attr("id", "chart")
     .attr("width", width + margin.left + margin.right)
     .attr("height", height + margin.top + margin.bottom)
+    .style('padding-left', '45px')
   .append("g")
     .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
