--- a/barchart/vert.html
+++ b/barchart/vert.html
@@ -43,8 +43,8 @@
   line-height: 1;
   font-size: 12px;
   padding: 12px;
-  background: rgba(0, 0, 0, 0.8);
-  color: #fff;
+  background: rgba(255, 255, 255, 255.8);
+  color: darkgrey;
   border-radius: 2px;
 }
 
@@ -55,7 +55,7 @@
   font-size: 12px;
   width: 100%;
   line-height: 1;
-  color: rgba(0, 0, 0, 0.8);
+  background: rgba(255, 255, 255, 255.8);
   content: "\25BC";
   position: absolute;
   text-align: center;
