--- a/barchart/vert.html
+++ b/barchart/vert.html
@@ -26,6 +26,10 @@
   fill: #238b45 ;
 }
 
+.y.axis {
+  text-anchor:initial;
+}
+
 .y.axis path {
   display: none;
 }
@@ -115,7 +119,7 @@ var xAxis = d3.svg.axis()
 var yAxis = d3.svg.axis()
     .scale(y)
     .tickSize(0)
-    .tickPadding(4)
+    .tickPadding(-4)
     .orient("left");
 
 var tip = d3.tip()
@@ -151,10 +155,6 @@ d3.csv("data_update.csv", function(error, data) {
       .call(xAxis)
 
 
-  svg.append("g")
-      .attr("class", "y axis")
-      .call(yAxis)
-
 
  var bar = svg.selectAll("g.bar")
       .data(data)
@@ -167,6 +167,11 @@ d3.csv("data_update.csv", function(error, data) {
       .attr("height", y.rangeBand())
       .on('mouseover', tip.show)
       .on('mouseout', tip.hide);
+
+
+  svg.append("g")
+      .attr("class", "y axis")
+      .call(yAxis)
 
 
 d3.select(window).on('resize', resize); 
@@ -207,7 +212,7 @@ d3.select("input").on("change", change);
     // Copy-on-write since tweens are evaluated after a delay.
     var y0 = y.domain(data.sort(this.checked
         ? function(a, b) { return b.per_capita - a.per_capita; }
-        : function(a, b) { return d3.ascending(a.state, b.state); })
+        : function(a, b) { return d3.descending(a.state, b.state); })
         .map(function(d) { return d.state; }))
         .copy();
 
