--- a/barchart/vert.html
+++ b/barchart/vert.html
@@ -166,7 +166,8 @@ d3.csv("data_update.csv", function(error, data) {
 
   svg.append("g")
       .attr("class", "y axis")
-      .attr("transform", "translate(50,0)")
+      .attr("transform", "translate(20,0)")
+      .attr("text-anchor", "start")
       .call(yAxis)
 
 
