--- a/barchart/vert.html
+++ b/barchart/vert.html
@@ -167,8 +167,9 @@ d3.csv("data_update.csv", function(error, data) {
   svg.append("g")
       .attr("class", "y axis")
       .attr("transform", "translate(20,0)")
-      .attr("text-anchor", "start")
       .call(yAxis)
+      .selectAll("text")
+      	.style("text-anchor","start");
 
 
 
