changed bar length to be per capita schools

--- a/barchart/vert.html
+++ b/barchart/vert.html
@@ -227,6 +227,8 @@ d3.select("input").on("change", change);
 
     transition.select(".y.axis")
         .call(yAxis)
+        .selectAll("text")
+      	.style("text-anchor","start");
 
       .selectAll("g")
         .delay(delay);
