--- a/barchart/vert.html
+++ b/barchart/vert.html
@@ -228,7 +228,7 @@ d3.select("input").on("change", change);
     transition.select(".y.axis")
         .call(yAxis)
         .selectAll("text")
-      	.style("text-anchor","start");
+      	.style("text-anchor","start")
 
       .selectAll("g")
         .delay(delay);
