changed bar length to be per capita schools

--- a/barchart/vert.html
+++ b/barchart/vert.html
@@ -229,6 +229,7 @@ d3.select("input").on("change", change);
         .call(yAxis)
         .selectAll("text")
       	.style("text-anchor","start")
+      	.delay(delay)
 
       .selectAll("g")
         .delay(delay);
