--- a/barchart/vert.html
+++ b/barchart/vert.html
@@ -229,9 +229,8 @@ d3.select("input").on("change", change);
         .call(yAxis)
         .selectAll("text")
       	.style("text-anchor","start")
-      	.delay(delay)
 
-      .selectAll("g")
+      transition.selectAll("g")
         .delay(delay);
   }
 
