--- a/barchart/vert.html
+++ b/barchart/vert.html
@@ -48,6 +48,7 @@
   background: rgba(0, 0, 0, 0.8);
   color: #fff;
   border-radius: 2px;
+  width: 35%;
 }
 
 /* Creates a small triangle extender for the tooltip */
@@ -124,8 +125,8 @@ var tip = d3.tip()
   .attr('class', 'd3-tip')
   .offset([-10, 0])
   .html(function(d) {
-    return "" + d.state + " has <strong><span style='color:red'>" + d.count + " universities</span> and a population of <span style='color:red'>" + d.population + ".</span></strong><br>"
-    + "It ranks <strong><span style='color:red'>#" + d.per_capita_rank + " </span></strong>in terms of universities on a per capita basis, <br>"
+    return "" + d.state + " has <strong><span style='color:red'>" + d.count + " universities</span></strong> and a population of <strong><span style='color:red'>" + d.population + ".</span></strong>"
+    + "It ranks <strong><span style='color:red'>#" + d.per_capita_rank + " </span></strong>in terms of universities on a per capita basis,"
     + " having one university for every " + d.per_capita + " thousand residents.";
   })
 
