--- a/barchart/vert.html
+++ b/barchart/vert.html
@@ -128,7 +128,7 @@ var tip = d3.tip()
   .offset([-10, 0])
   .html(function(d) {
     return "" + d.state + " has <strong><span style='color:red'>" + d.count + " universities</span></strong>"
-    "+ and a population of <strong><span style='color:red'>" + format(d.population) + ".  </span></strong>"
+    + " and a population of <strong><span style='color:red'>" + format(d.population) + ".  </span></strong>"
     + "It ranks <strong><span style='color:red'>#" + d.per_capita_rank + " </span></strong>in terms of universities on a per capita basis,"
     + " having one university for every " + d.per_capita + " thousand residents.";
   })
