--- a/barchart/vert.html
+++ b/barchart/vert.html
@@ -155,10 +155,13 @@ d3.csv("data_update.csv", function(error, data) {
   svg.append("g")
       .attr("class", "x axis")
       .call(xAxis)
-      .append("text", "Residents per University")
+      .append("text")
+	  	.attr("class", "ytitle")
       	.attr("dy", "-1em")
       	.attr("x", width/2)
-      	.style("font-size", "14px");
+      	.style("text-anchor", "middle")
+      	.style("font-size", "16px")
+      .text("Residents per University")
 
 
   svg.append("g")
