--- a/barchart/vert.html
+++ b/barchart/vert.html
@@ -161,7 +161,7 @@ d3.csv("data_update.csv", function(error, data) {
       	.attr("x", width/2)
       	.style("text-anchor", "middle")
       	.style("font-size", "16px")
-      .text("Residents per University")
+      .text("Thousand Residents per University")
 
 
   svg.append("g")
