changed bar length to be per capita schools

--- a/barchart/vert.html
+++ b/barchart/vert.html
@@ -35,6 +35,7 @@
 
 .y.axis text {
   font-size:13px;
+  text-anchor:start;
   }
 
 .x.axis text {
@@ -243,6 +244,8 @@ d3.select("input").on("change", change);
 
     transition.select(".y.axis")
         .call(yAxis)
+        .selectAll("text")
+      	.style("text-anchor","start")
 
       transition.select(".y.axis").selectAll("g")
         .delay(delay);
