--- a/barchart/vert.html
+++ b/barchart/vert.html
@@ -168,9 +168,7 @@ d3.csv("data_update.csv", function(error, data) {
   svg.append("g")
       .attr("class", "y axis")
       .attr("transform", "translate(10,0)")
-      .call(yAxis)
-      .selectAll("text")
-      	.style("text-anchor","start");
+      .call(yAxis);
 
 
 
@@ -244,8 +242,6 @@ d3.select("input").on("change", change);
 
     transition.select(".y.axis")
         .call(yAxis)
-        .selectAll("text")
-      	.style("text-anchor","start")
 
       transition.select(".y.axis").selectAll("g")
         .delay(delay);
