--- a/barchart/vert.html
+++ b/barchart/vert.html
@@ -35,7 +35,6 @@
 
 .y.axis text {
   font-size:13px;
-  text-anchor:start;
   }
 
 .x.axis text {
@@ -122,7 +121,7 @@ var yAxis = d3.svg.axis()
     .scale(y)
     .tickSize(0)
     .tickPadding(4)
-    .orient("left");
+    .orient("right");
 
 var tip = d3.tip()
   .attr('class', 'd3-tip')
@@ -167,7 +166,7 @@ d3.csv("data_update.csv", function(error, data) {
 
   svg.append("g")
       .attr("class", "y axis")
-      .attr("transform", "translate(10,0)")
+      .attr("transform", "translate(-" + width + "10,0)")
       .call(yAxis);
 
 
