changed bar length to be per capita schools

--- a/barchart/vert.html
+++ b/barchart/vert.html
@@ -166,7 +166,7 @@ d3.csv("data_update.csv", function(error, data) {
 
   svg.append("g")
       .attr("class", "y axis")
-      .attr("transform", "translate(-" + width + "10,0)")
+      .attr("transform", "translate(-" + width + "+10,0)")
       .call(yAxis);
 
 
