--- a/barchart/vert.html
+++ b/barchart/vert.html
@@ -102,8 +102,7 @@ format = d3.format("0,000");
 
 var margin = {top: 40, right: 20, bottom: 50, left: 10},
     width = 960 - margin.left - margin.right,
-    height = 1160 - margin.top - margin.bottom,
-    axiswidth = 10 - width;
+    height = 1160 - margin.top - margin.bottom;
 
 var x = d3.scale.linear()
     .range([0, width])
@@ -167,7 +166,7 @@ d3.csv("data_update.csv", function(error, data) {
 
   svg.append("g")
       .attr("class", "y axis")
-      .attr("transform", "translate(10,0)")
+      .attr("transform", "translate(5,0)")
       .call(yAxis);
 
 
@@ -208,7 +207,9 @@ function resize() {
         .attr('width', function(d) { return x(d.per_capita); });
 
     // update axes
-      svg.select(".x.axis").call(xAxis);
+      svg.select(".x.axis").call(xAxis)
+      	.selectAll("text")
+      	.attr("x", width/2);
 
 	}
 	
@@ -243,7 +244,7 @@ d3.select("input").on("change", change);
     transition.select(".y.axis")
         .call(yAxis)
 
-      transition.select(".y.axis").selectAll("g")
+    .selectAll("g")
         .delay(delay);
   }
 
