changed bar length to be per capita schools

--- a/barchart/vert.html
+++ b/barchart/vert.html
@@ -209,7 +209,7 @@ function resize() {
     // update axes
       svg.select(".x.axis").call(xAxis)
       
-      .select("xtitle")
+      .select(".xtitle")
       	.attr("x", width/2);
 
 	}
