--- a/barchart/vert.html
+++ b/barchart/vert.html
@@ -48,7 +48,6 @@
   background: rgba(0, 0, 0, 0.8);
   color: #fff;
   border-radius: 2px;
-  width: 35%;
 }
 
 /* Creates a small triangle extender for the tooltip */
@@ -98,6 +97,13 @@
 <script src="../d3-tip/index.js"></script>
 <script>
 
+if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
+	var tipwidth = 65%
+}
+else {
+	var tipwidth = 35%
+}
+
 format = d3.format("0,000");
 
 var margin = {top: 50, right: 20, bottom: 50, left: 10},
@@ -126,6 +132,7 @@ var yAxis = d3.svg.axis()
 var tip = d3.tip()
   .attr('class', 'd3-tip')
   .offset([-10, 0])
+  .style("width", tipwidth)
   .html(function(d) {
     return "" + d.state + " has <strong><span style='color:red'>" + d.count + " universities</span></strong>"
     + " and a population of <strong><span style='color:red'>" + format(d.population) + ".  </span></strong>"
