changed bar length to be per capita schools

--- a/barchart/vert.html
+++ b/barchart/vert.html
@@ -98,10 +98,10 @@
 <script>
 
 if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
-	var tipwidth = 65%
+	var tipwidth = 65%;
 }
 else {
-	var tipwidth = 35%
+	var tipwidth = 35%;
 }
 
 format = d3.format("0,000");
