updated helper text

--- a/barchart/vert.html
+++ b/barchart/vert.html
@@ -79,10 +79,11 @@
         
         <h1>Higher Education Institutions by State</h1>
         
-        <p>This chart shows the number of universities per state within the National
-        Center for Educational Statistics Integrated Postsecondary Education System (IPEDS) System.
-        The data on universities was obtained from <a href="https://inventory.data.gov/dataset/032e19b4-5a90-41dc-83ff-6e4cd234f565/resource/38625c3d-5388-4c16-a30f-d105432553a4">data.gov</a>
-        and state population data was obtained from <a href="http://www.census.gov/popest/data/national/totals/2014/NST-EST2014-alldata.html">census.gov</a>.
+        <p>This chart shows the number of residents per university by state. The smaller the bar,
+        the more universities on a per capita basis. Data on universities was obtained from the the National
+        Center for Educational Statistics Integrated Postsecondary Education System (IPEDS) System and can be found 
+        at <a href="https://inventory.data.gov/dataset/032e19b4-5a90-41dc-83ff-6e4cd234f565/resource/38625c3d-5388-4c16-a30f-d105432553a4">data.gov</a>.
+        State population data was obtained from <a href="http://www.census.gov/popest/data/national/totals/2014/NST-EST2014-alldata.html">census.gov</a>.
         </p>
 
         <div id="canvas">
