updated classification data

--- a/patents/classification_data_toJSON.html
+++ b/patents/classification_data_toJSON.html
@@ -5,7 +5,7 @@
 <script src="d3/d3.v3.js"></script>
 <script>
 
-d3.csv("classifications_update.csv", function(error, data) {
+d3.csv("classifications.csv", function(error, data) {
 
 var nested_data = { "key": "Classifications", "values":
 	d3.nest()
