--- a/patents/patents.html
+++ b/patents/patents.html
@@ -104,11 +104,11 @@ console.log(nodes);
         });
 
     transition.selectAll("text")
+      .style("display", function(d) { if ( focus.depth == 0) return d.r > 50 ? "inline" : "none"; })
       .filter(function(d) { return d.parent === focus || this.style.display === "inline"; })
         .style("fill-opacity", function(d) { return d.parent === focus ? 1 : 0; })
         .each("start", function(d) { if (d.parent === focus) this.style.display = "inline"; })
-        .each("end", function(d) { if (d.parent !== focus) this.style.display = "none"; })
-        .style("display", function(d) { if ( focus.depth == 0) return d.r > 50 ? "inline" : "none"; });
+        .each("end", function(d) { if (d.parent !== focus) this.style.display = "none"; });
   }
 
   function zoomTo(v) {
